use base_url for assets path

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate 
   - jekyll-redirect-from 
+base-url: "la-magnetique"
 
 whitelist:
   - jekyll-redirect-from
